--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="md:flex md:flex-wrap md:flex-row">
+  <app-card *ngFor="let channel of channelList" [channel]="channel"></app-card>
+</div>
