--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="border-gray-200 px-2 sm:px-4 py-2.5 bg-gray-800">
   <div class="container flex flex-wrap flex-row justify-between items-center mx-auto">
-    <a href="https://www.bemol.com.br">
+    <a routerLink="">
       <img src="../../../assets/bemol-digital-inline-colorful.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
     </a>
     <button data-collapse-toggle="mobile-menu" type="button"
@@ -21,10 +21,10 @@
     <div class="hidden w-full md:block md:w-auto" id="mobile-menu">
       <ul class="flex flex-col my-3 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
         <li>
-          <a href="#" class="link">Login</a>
+          <a routerLink="login" class="link">Login</a>
         </li>
         <li>
-          <a href="#" class="link">Register</a>
+          <a routerLink="register" class="link">Register</a>
         </li>
       </ul>
     </div>
