--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
-<div class="md:flex md:flex-wrap md:flex-row">
+<div class="container">
   <app-card *ngFor="let channel of channelList" [channel]="channel"></app-card>
 </div>
