--- a/src/app/components/register-form/register-form.component.html
+++ b/src/app/components/register-form/register-form.component.html
@@ -45,30 +45,27 @@
         <label>
           Cidade
         </label>
-        <input disabled class="hover:cursor-not-allowed" #cidade type="text">
+        <input class="hover:cursor-not-allowed" formControlName="cidade" #cidade type="text">
       </div>
       <div class="w-full md:w-1/2 px-3  mb-6 md:mb-0">
         <label>
-          Rua
+          bairro
         </label>
-        <input disabled class="hover:cursor-not-allowed" #rua type="text">
+        <input class="hover:cursor-not-allowed" formControlName="bairro" #bairro type="text">
       </div>
-    </div>
-    <div class="flex flex-wrap -mx-3 mb-2">
-      <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="w-full md:w-1/2 px-3  mb-6 md:mb-0">
         <label>
-          UF
+          rua
         </label>
-        <div class="relative">
-          <input disabled class="hover:cursor-not-allowed" #uf type="text">
-        </div>
+        <input class="hover:cursor-not-allowed" formControlName="rua" #rua type="text">
       </div>
-      <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
+      <div class="w-full md:w-1/2 px-3  mb-6 md:mb-0">
         <label>
-          Bairro
+          uf
         </label>
-        <input disabled class="hover:cursor-not-allowed" #bairro type="text">
+        <input class="hover:cursor-not-allowed" formControlName="uf" #uf type="text">
       </div>
+
       <button type="submit" [disabled]="  buttonAllowed()" [class.disabled]="buttonAllowed()"
         class="bg-transparent hover:bg-blue-500 hover:cursor-pointer text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
         Enviar
