feat: added one more channel

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
+<h2 class="text-center m-2" style="font-size: 25px;">Os canais de vendas da bemol estão prontos para atender você.</h2>
 <div class="container">
   <app-card *ngFor="let channel of channelList" [channel]="channel"></app-card>
 </div>
