--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,11 +1,14 @@
 <div class="max-w-sm rounded overflow-hidden shadow-lg">
   <img src="{{channel.img}}">
-  <div class="px-6">
+  <div class="font-bold text-xl mb-2  max-w-[250px]">
+    <p class="text-gray-700 text-base p-2">
+      {{channel.description}}
+    </p>
   </div>
   <div>
     <a href="{{channel.href}}" target="_blank">
       <span class="inline-block bg-blue-600 px-3 py-3 text-sm font-semibold text-white w-full
-        text-center hover:cursor-pointer hover:bg-blue-700">{{channel.buttonMsg}}</span>
+        text-center hover:cursor-pointer hover:bg-blue-700">Visitar</span>
     </a>
   </div>
 </div>
