--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,5 +3,9 @@ app-card{
 }
 
 .container {
-  @apply md:flex md:flex-wrap md:flex-row flex flex-col items-center max-w-[60vw]
+  @apply md:flex md:flex-wrap md:flex-row flex flex-col items-center max-w-[80vw] justify-evenly
+}
+
+h2 {
+  font-size: 20px;
 }
